force-app/main/default/objects/Scoring_Rule__c/Scoring_Rule__c.object-meta.xml
<CustomObject>
    <description>Maps score ranges to clinical interpretations (e.g., 0-4 = &quot;Minimal Depression&quot;).</description>
    <label>Scoring Rule</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Scoring Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>