force-app/main/default/objects/Scoring_Rule__c/fields/MM_Action_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>MM_Action_Recommendation__c</fullName>
    <label>Action Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>