force-app/main/default/objects/Scoring_Rule__c/fields/MM_Min_Score__c.field-meta.xml
<CustomField>
    <fullName>MM_Min_Score__c</fullName>
    <label>Min Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>