force-app/main/default/objects/Scoring_Rule__c/fields/MM_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>MM_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>MM_Questionnaire__c</referenceTo>
    <relationshipLabel>Scoring Rules</relationshipLabel>
    <relationshipName>Scoring_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>