force-app/main/default/objects/Scoring_Rule__c/fields/MM_Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>MM_Summary_Text__c</fullName>
    <label>Summary Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>